[gd_scene load_steps=18 format=2]

[ext_resource path="res://Fonts/8bitOperatorPlus8-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Sprites/Placeholders/UpArrow.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Placeholders/DownArrow.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Placeholders/LeftArrow.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Placeholders/PushbackBar.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Placeholders/SpeedMeters.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Placeholders/Roller.png" type="Texture" id=7]
[ext_resource path="res://Scripts/GameTriggers/InstructionsMenu.gd" type="Script" id=8]
[ext_resource path="res://Sprites/Placeholders/PlaceholderSprite.png" type="Texture" id=9]
[ext_resource path="res://Sprites/Placeholders/PreviousButton.png" type="Texture" id=10]
[ext_resource path="res://Sprites/Placeholders/NextButton.png" type="Texture" id=11]

[sub_resource type="DynamicFont" id=1]
size = 72
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 65
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 65
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 45
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
size = 60
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=6]
size = 72
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[node name="InstructionsMenu" type="CanvasLayer"]
script = ExtResource( 8 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -30.0
margin_top = -20.0
margin_right = 1042.0
margin_bottom = 615.0
mouse_filter = 2
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NextButton" type="TextureButton" parent="."]
anchor_left = 0.807618
anchor_top = 0.428333
anchor_right = 1.05176
anchor_bottom = 0.845
margin_right = -200.0
margin_bottom = -200.0
rect_scale = Vector2( 5, 5 )
texture_normal = ExtResource( 11 )
texture_pressed = ExtResource( 11 )
texture_hover = ExtResource( 11 )
texture_disabled = ExtResource( 11 )
texture_focused = ExtResource( 11 )
expand = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="PreviousButton" type="TextureButton" parent="."]
anchor_left = 0.731446
anchor_top = 0.428333
anchor_right = 0.975586
anchor_bottom = 0.845
margin_left = -804.001
margin_top = 0.000152588
margin_right = -1004.0
margin_bottom = -200.0
rect_scale = Vector2( 5, 5 )
texture_normal = ExtResource( 10 )
texture_pressed = ExtResource( 10 )
texture_hover = ExtResource( 10 )
texture_disabled = ExtResource( 10 )
texture_focused = ExtResource( 10 )
expand = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Container" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="JumpInstruction" type="Control" parent="Container"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Jump" type="RichTextLabel" parent="Container/JumpInstruction"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -511.0
margin_top = -306.993
margin_right = 512.0
margin_bottom = 296.007
mouse_filter = 2
custom_fonts/normal_font = SubResource( 1 )
text = "






	  PRESS THE UP ARROW 
	        KEY TO JUMP"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UpArrow" type="Sprite" parent="Container/JumpInstruction"]
position = Vector2( 40.4115, -90.6659 )
scale = Vector2( 5, 5 )
texture = ExtResource( 2 )

[node name="CrouchInstruction" type="Control" parent="Container"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 1004.0
margin_top = -20.0
margin_right = 1044.0
margin_bottom = 20.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Crouch" type="RichTextLabel" parent="Container/CrouchInstruction"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -511.0
margin_top = -311.483
margin_right = 512.0
margin_bottom = 291.517
mouse_filter = 2
custom_fonts/normal_font = SubResource( 1 )
text = "






	PRESS THE DOWN ARROW 
	       KEY TO CROUCH"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DownArrow" type="Sprite" parent="Container/CrouchInstruction"]
position = Vector2( 40.4115, -90.6659 )
scale = Vector2( 5, 5 )
texture = ExtResource( 3 )

[node name="PushbackInstructions" type="Control" parent="Container"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 2028.0
margin_top = -20.0
margin_right = 2068.0
margin_bottom = 20.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pushback" type="RichTextLabel" parent="Container/PushbackInstructions"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -505.661
margin_top = -314.993
margin_right = 517.339
margin_bottom = 288.007
mouse_filter = 2
custom_fonts/normal_font = SubResource( 1 )
text = "






	PRESS THE LEFT ARROW 
	    KEY IN THE AIR TO 
	         PUSHBACK"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LeftArrow" type="Sprite" parent="Container/PushbackInstructions"]
position = Vector2( 40.4115, -90.6659 )
scale = Vector2( 5, 5 )
texture = ExtResource( 4 )

[node name="PushbackBarInstruction" type="Control" parent="Container"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 3052.0
margin_top = -20.0
margin_right = 3092.0
margin_bottom = 20.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PushbackBar" type="RichTextLabel" parent="Container/PushbackBarInstruction"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -511.0
margin_top = -306.339
margin_right = 512.0
margin_bottom = 296.661
mouse_filter = 2
custom_fonts/normal_font = SubResource( 3 )
text = "






	   IF THE BAR IS FULLY
    GREEN YOU CAN PUSHBACK"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PushbackBarImage" type="Sprite" parent="Container/PushbackBarInstruction"]
position = Vector2( 40.4115, -90.6659 )
texture = ExtResource( 5 )

[node name="SlowDownInstructions" type="Control" parent="Container"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 4076.0
margin_top = -20.0
margin_right = 4116.0
margin_bottom = 20.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SlowDown" type="RichTextLabel" parent="Container/SlowDownInstructions"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -511.0
margin_top = -304.776
margin_right = 512.0
margin_bottom = 298.224
mouse_filter = 2
custom_fonts/normal_font = SubResource( 4 )
text = "






	  PRESS THE LEFT ARROW 
      KEY ON THE GROUND TO 
	     REDUCE MAX SPEED"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LeftArrow" type="Sprite" parent="Container/SlowDownInstructions"]
position = Vector2( 40.4115, -90.6659 )
scale = Vector2( 5, 5 )
texture = ExtResource( 4 )

[node name="SpeedMeterInstruction" type="Control" parent="Container"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 5100.0
margin_top = -20.0
margin_right = 5140.0
margin_bottom = 20.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpeedMeter" type="RichTextLabel" parent="Container/SpeedMeterInstruction"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -511.0
margin_top = -310.115
margin_right = 512.0
margin_bottom = 292.885
mouse_filter = 2
custom_fonts/normal_font = SubResource( 2 )
text = "










	 REDUCING SPEED WILL HELP YOU LOOSE 
	      BUT DON'T MAKE IT TOO OBVIOUS"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpeedMeterImage" type="Sprite" parent="Container/SpeedMeterInstruction"]
position = Vector2( 40.4115, -90.6659 )
texture = ExtResource( 6 )

[node name="EndInstruction" type="Control" parent="Container"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 6124.0
margin_top = -20.0
margin_right = 6164.0
margin_bottom = 20.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RollerBlader" type="RichTextLabel" parent="Container/EndInstruction"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -511.0
margin_top = -304.776
margin_right = 512.0
margin_bottom = 298.224
mouse_filter = 2
custom_fonts/normal_font = SubResource( 5 )
text = "







        TRY TO LOSE THE RACES 
       AND BECOME THE WORST :D








	"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Ending" type="Sprite" parent="Container/EndInstruction"]
position = Vector2( 40.4115, -90.6659 )
scale = Vector2( 5, 5 )
texture = ExtResource( 7 )

[node name="PlayButton" type="TextureButton" parent="Container/EndInstruction"]
anchor_left = -1.275
anchor_top = 4.325
anchor_right = 3.725
anchor_bottom = 6.5
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 9 )
texture_hover = ExtResource( 9 )
texture_disabled = ExtResource( 9 )
texture_focused = ExtResource( 9 )
expand = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="PlayText" type="RichTextLabel" parent="Container/EndInstruction/PlayButton"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -92.0
margin_top = -31.3636
margin_right = 92.0
margin_bottom = 24.6364
mouse_filter = 2
custom_fonts/normal_font = SubResource( 6 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
text = "PLAY"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="button_down" from="NextButton" to="." method="_on_NextButton_button_down"]
[connection signal="button_down" from="PreviousButton" to="." method="_on_PreviousButton_button_down"]
[connection signal="button_down" from="Container/EndInstruction/PlayButton" to="." method="_on_PlayButton_button_down"]
